allow the jar to be specified as a file name or a URL